--- a/P3/Content/Site.css
+++ b/P3/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.jumbotron {
+    color: white;
+    background-color: darkblue;
+    text-align: center;
+
+}
