Removed uneccessary html files and added more styling for jumbotron.

--- a/P3/Views/Shared/_Layout.cshtml
+++ b/P3/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <h1 class="display-4">Contacts Tracker</h1>
         <p class="lead">The simple contacts tracker app.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>Keep your contacts organized in this easy-to-use app.</p>
         
     </div>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
